# AEGIS

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  TASK_PROMPTS.md  claude.md  docker-compose.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  integration.yml  security-scan.yml
aegis/: __init__.py  cli.py  config.day7_core7.yaml  config.hosted.yaml  config.local_single_qwen.yaml  config.minimal.yaml  config.phase5b_v2_matrix.yaml  config.py  config.yaml  lazy_loading.py  models.py  optional_dependencies.py  orchestrator.py  secret_safety.py
aegis/attacks/: __init__.py  asi01_goal_hijack.py  asi02_tool_misuse.py  asi03_identity_privilege.py  asi03_training_data_poison.py  asi04_supply_chain.py  asi05_code_exec.py  asi06_memory_poison.py  asi07_inter_agent.py  asi08_cascading_failure.py  asi09_human_trust.py  asi10_rogue_agent.py  asi_dynamic_cloak.py  asi_hitl.py  asi_semantic_manip.py  base.py  llm01_crosslingual.py  llm01_prompt_inject.py  llm02_data_disclosure.py  mcp06_cmd_injection.py
aegis/attacks/_deprecated/: __init__.py  asi03_training_data_poison.py
aegis/attacks/payloads/: asi01_goal_hijack.yaml  asi02_tool_misuse.yaml  asi03_identity_privilege.yaml  asi04_supply_chain.yaml  asi05_code_exec.yaml  asi06_memory_poison.yaml  asi07_inter_agent.yaml  asi09_human_trust.yaml  asi_hitl.yaml  llm01_prompt_inject.yaml  llm02_data_disclosure.yaml  mcp06_cmd_injection.yaml  schema.yaml
aegis/campaigns/: __init__.py  runner.py
aegis/defenses/: __init__.py  input_validator.py  mcp_integrity.py  output_filter.py  permission_enforcer.py  tool_boundary.py
aegis/evaluation/: __init__.py  llm_judge.py  metrics.py  pipeline.py  protocol_adapter.py  rule_detector.py  scorer.py
aegis/evidence/: __init__.py  store.py
aegis/fixtures/: __init__.py  cloaked_http.py  hitl_approval.py  peer_agent.py
aegis/interfaces/: __init__.py  agent.py  anthropic.py  attack.py  defense.py  hf_inference.py  openai_compat.py  scorer.py  scorer_protocol.py
aegis/reporting/: __init__.py  atlas_mapper.py  owasp_mapper.py  report_generator.py
aegis/scoring/: __init__.py  rubric_loader.py
aegis/testbed/: __init__.py  agent.py  agent_config.py  agent_defenses.py  agent_output.py  agent_providers.py  agent_tools.py  memory_store.py  mock_agent.py  rag_pipeline.py  retry.py
dashboard/: __init__.py  app.py
dashboard/pages/: defense_matrix.py  findings.py  overview.py  owasp_breakdown.py  run_scan.py
dashboard/utils/: charts.py  rate_limit.py  report_loader.py  session_reports.py
datasets/kb_fixtures/: asi06_poison.jsonl  clean_ops.jsonl
datasets/payloads/: asi01_goal_hijack.json  asi02_tool_misuse.json  asi03_identity_privilege.yaml  asi04_supply_chain.json  asi05_code_exec.json  asi06_memory_poison.json  asi07_inter_agent.yaml  asi08_cascading_failure.yaml  asi09_human_trust.yaml  asi10_rogue_agent.yaml  asi_dynamic_cloak.yaml  asi_hitl.yaml  asi_semantic_manip.yaml  llm01_crosslingual.yaml  llm01_crosslingual_draft.yaml  llm01_prompt_inject.json  llm02_data_disclosure.json  mcp06_cmd_injection.json
deploy/cloudrun/: deploy.sh
docs/: COMPANY_QUICKSTART.md  DAY5_LIVE_RUN.md  DAY6_BASELINE_RUN.md  DAY7_BUFFER_SYNC.md  DEFENSE_EVALUATION.md  DEMO_SCRIPT.md  FINDINGS.md  LAUNCH_COPY.md  MCP_TOOL_SECURITY.md  METHODOLOGY.md  PACKAGING_DOCKER.md  PROBE_CATALOG_REVIEW.md  augustus_scan_report.html  augustus_scan_results.jsonl
promptfoo_configs/: basic_redteam.yaml  llm01_basic.yaml
reports/: AEGIS_Security_Assessment_Report.html  day89_defense_matrix_20260420T132439Z.json  sample_baseline_report.html  sample_baseline_report.json
schemas/: matrix_summary.schema.json  security_report.schema.json
scripts/: build_kb_corpus.py  normalize_payload_metadata.py  ollama_init.sh  validate_reports.py
tests/: conftest.py  test_cli.py  test_config.py  test_docker_smoke.py  test_integration.py  test_interfaces_hosted.py  test_models.py  test_orchestrator.py  test_orchestrator_lazy.py  test_packaging.py
tests/test_attacks/: test_all_modules.py  test_asi02.py  test_asi03_identity_privilege.py  test_asi04.py  test_asi05.py  test_asi06.py  test_asi07_inter_agent.py  test_asi08_cascading_failure.py  test_asi09_human_trust.py  test_asi10_rogue_agent.py  test_asi_hitl.py  test_base.py  test_llm01.py  test_llm01_crosslingual.py  test_mcp06.py  test_phase2_modules.py  test_phase3_modules.py  test_phase4_modules.py  test_phase5_release_readiness.py  test_registry_lazy.py
tests/test_campaigns/: test_runner.py
tests/test_dashboard/: test_charts.py  test_pages.py  test_report_loader.py  test_run_scan.py
tests/test_defenses/: test_input_validator.py  test_mcp_integrity.py  test_output_filter.py  test_permission_enforcer.py  test_tool_boundary.py
tests/test_eval/: test_hosted_judge.py  test_llm_judge.py  test_metrics.py  test_pipeline.py  test_protocol_adapter.py  test_provider_error_inconclusive.py  test_rule_detector.py  test_rule_detector_fp.py  test_scorer_stub.py  test_setup_preconditions.py
tests/test_evidence/: test_orchestrator_trace.py  test_store.py
tests/test_fixtures/: test_phase1_fixtures.py
tests/test_reporting/: test_atlas_mapper.py  test_owasp_mapper.py  test_report_generator.py  test_schemas.py
tests/test_testbed/: test_agent.py  test_agent_e2e_gate.py  test_evil_server.py  test_kb_runtime.py  test_mcp_servers.py  test_memory_store.py  test_rag_pipeline.py  test_retry.py
(+35 files in other folders)
