[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis"
version = "0.1.0"
description = "Agentic Exploit & Guardrail Investigation Suite — security testing framework for agentic AI systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "langchain>=0.3.0,<0.4",
    "langchain-community>=0.3.0,<0.4",
    "langgraph>=0.2.0,<0.3",
    "fastmcp>=2.0.0,<3",
    "chromadb>=0.5.0",
    "pydantic>=2.7.0,<3",
    "typer>=0.12.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "deepeval>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jsonschema>=4.23.0",
    "ruff>=0.4.0",
]
redteam = [
    "pyrit>=0.5.0",
]

[project.scripts]
aegis = "aegis.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["aegis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["aegis"]

[tool.coverage.run]
source = ["aegis"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "jsonschema>=4.23.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]
